--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "assert": "^2.0.0",
     "axios": "^1.2.0",
     "buffer": "^6.0.3",
+    "crypto": "npm:crypto-browserify",
+    "crypto-browserify": "^3.12.0",
     "dayjs": "^1.11.7",
     "debounce": "^1.2.1",
     "events": "^3.3.0",
@@ -95,6 +97,7 @@
     "react-native-zendesk-messaging": "^0.1.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
+    "stream": "npm:stream-browserify",
     "stream-browserify": "^3.0.0",
     "zustand": "^4.1.4"
   },
