--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-hook-form": "^7.40.0",
     "react-native": "0.70.5",
     "react-native-blob-util": "^0.16.3",
+    "react-native-canvas": "^0.1.39",
     "react-native-dotenv": "^3.3.1",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-exception-handler": "^2.10.10",
