--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativeapp",
-  "version": "1.1.9",
+  "version": "2.0.0",
   "private": true,
   "license": "MIT",
   "repository": {
@@ -10,8 +10,8 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios --device",
-    "ios:simulator": "react-native run-ios --simulator=\"iPhone 14 Pro\"",
-    "ios:plus": "react-native run-ios --simulator=\"iPhone 14 Plus\"",
+    "ios:simulator": "react-native run-ios --simulator=\"iPhone 15 Pro\"",
+    "ios:plus": "react-native run-ios --simulator=\"iPhone 15 Plus\"",
     "ios:SE": "react-native run-ios --simulator=\"iPhone SE (1st generation)\"",
     "ios:clean": "yarn clean; yarn ios",
     "start": "react-native start",
@@ -35,29 +35,29 @@
     "testnet:ios": "export NETWORK=TESTNET; yarn build:ios"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-clipboard/clipboard": "^1.11.1",
-    "@react-native-community/checkbox": "^0.5.13",
-    "@react-native-masked-view/masked-view": "^0.2.8",
-    "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/drawer": "^6.5.0",
-    "@react-navigation/elements": "^1.3.6",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/native-stack": "^6.9.1",
-    "@react-navigation/stack": "^6.3.4",
-    "@reduxjs/toolkit": "^1.9.0",
-    "@sentry/react-native": "^3.4.3",
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-clipboard/clipboard": "^1.12.1",
+    "@react-native-community/checkbox": "^0.5.16",
+    "@react-native-masked-view/masked-view": "^0.2.9",
+    "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/drawer": "^6.6.4",
+    "@react-navigation/elements": "^1.3.19",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.14",
+    "@react-navigation/stack": "6.3.18",
+    "@reduxjs/toolkit": "^1.9.6",
+    "@sentry/react-native": "^5.10.0",
     "@toruslabs/react-native-web-browser": "^1.1.0",
-    "@web3auth/react-native-sdk": "^4.0.0",
+    "@web3auth/react-native-sdk": "^5.0.0",
     "@web3auth/web3auth": "^2.1.3",
-    "assert": "^2.0.0",
-    "axios": "^1.2.0",
-    "bignumber.js": "^9.1.1",
+    "assert": "^2.1.0",
+    "axios": "^1.5.1",
+    "bignumber.js": "^9.1.2",
     "buffer": "^6.0.3",
-    "crypto": "npm:crypto-browserify",
     "crypto-browserify": "^3.12.0",
-    "dayjs": "^1.11.7",
+    "dayjs": "^1.11.10",
     "debounce": "^1.2.1",
+    "empty-module": "^0.0.2",
     "events": "^3.3.0",
     "is_js": "^0.9.0",
     "lodash.get": "^4.4.2",
@@ -65,80 +65,91 @@
     "lodash.throttle": "^4.1.1",
     "lodash.zip": "^4.2.0",
     "lodash.zipobject": "^4.1.3",
-    "meta1-vision-dex": "^0.7.9",
-    "native-base": "^3.4.25",
-    "patch-package": "^6.5.0",
-    "postinstall-postinstall": "^2.1.0",
-    "qrcode": "^1.5.1",
-    "react": "18.1.0",
-    "react-hook-form": "^7.40.0",
-    "react-native": "0.70.5",
-    "react-native-blob-util": "^0.16.3",
-    "react-native-dotenv": "^3.3.1",
+    "meta1-vision-dex": "^0.7.15",
+    "native-base": "^3.4.28",
+    "patch-package": "^8.0.0",
+    "process": "^0.11.10",
+    "qrcode": "^1.5.3",
+    "react": "18.2.0",
+    "react-hook-form": "^7.47.0",
+    "react-native": "0.72.5",
+    "react-native-blob-util": "^0.19.1",
+    "react-native-dotenv": "^3.4.9",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-exception-handler": "^2.10.10",
     "react-native-feather": "^1.1.2",
-    "react-native-gesture-handler": "^2.8.0",
+    "react-native-gesture-handler": "^2.13.1",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^4.12.5",
-    "react-native-pdf": "^6.6.2",
+    "react-native-pdf": "^6.7.1",
     "react-native-prompt-android": "^1.1.0",
     "react-native-reanimated": "^3.5.4",
-    "react-native-restart": "^0.0.24",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "^3.18.2",
-    "react-native-signature-canvas": "^4.4.1",
+    "react-native-screens": "^3.25.0",
+    "react-native-signature-canvas": "^4.7.1",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "12.1.1",
+    "react-native-svg": "^13.14.0",
     "react-native-svg-charts": "^5.4.0",
-    "react-native-text-input-mask": "3.1.4",
-    "react-native-toast-message": "^2.1.5",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-vision-camera": "^2.15.2",
-    "react-native-webview": "^11.23.1",
-    "react-native-zendesk-messaging": "^0.1.0",
-    "react-redux": "^8.0.5",
+    "react-native-text-input-mask": "3.2.0",
+    "react-native-toast-message": "^2.1.6",
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-vision-camera": "^3.3.1",
+    "react-native-webview": "^13.6.2",
+    "react-native-zendesk-messaging": "^0.1.2",
+    "react-redux": "^8.1.3",
+    "readable-stream": "^4.4.2",
     "redux-persist": "^6.0.0",
-    "stream": "npm:stream-browserify",
     "stream-browserify": "^3.0.0",
-    "zustand": "^4.1.4"
+    "zustand": "^4.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
-    "@babel/plugin-transform-arrow-functions": "^7.18.6",
-    "@babel/plugin-transform-shorthand-properties": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@babel/runtime": "^7.20.6",
+    "@babel/core": "^7.23.0",
+    "@babel/plugin-transform-arrow-functions": "^7.22.5",
+    "@babel/plugin-transform-shorthand-properties": "^7.22.5",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-typescript": "^7.23.0",
+    "@babel/runtime": "^7.23.1",
     "@react-native-community/eslint-config": "^3.2.0",
-    "@types/debounce": "^1.2.1",
+    "@react-native/eslint-config": "^0.73.1",
+    "@react-native/js-polyfills": "^0.73.1",
+    "@react-native/metro-babel-transformer": "^0.73.11-nightly-20230807-f9a63ec00",
+    "@react-native/metro-config": "^0.73.1",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/debounce": "^1.2.2",
     "@types/lodash.get": "^4.4.7",
     "@types/lodash.omit": "^4.5.7",
     "@types/lodash.throttle": "^4.1.7",
     "@types/lodash.zip": "^4.2.7",
     "@types/lodash.zipobject": "^4.1.7",
-    "@types/qrcode": "^1.5.0",
-    "@types/react-native": "^0.70.6",
+    "@types/qrcode": "^1.5.2",
+    "@types/react": "^18.2.24",
+    "@types/react-native": "^0.72.3",
     "@types/react-native-dotenv": "^0.2.0",
-    "@types/react-native-svg-charts": "^5.0.12",
-    "@types/react-native-vector-icons": "^6.4.13",
-    "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/parser": "^5.42.0",
-    "babel-jest": "^29.3.1",
-    "babel-plugin-polyfill-corejs2": "^0.3.3",
-    "babel-plugin-polyfill-corejs3": "^0.6.0",
-    "babel-plugin-polyfill-es-shims": "^0.7.1",
-    "babel-plugin-polyfill-regenerator": "^0.4.1",
-    "eslint": "^8.26.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "0.72.3",
-    "prettier": "^2.8.0",
-    "react-devtools": "^4.26.1",
-    "react-native-flipper": "^0.203.0",
-    "react-native-svg-transformer": "^1.0.0",
-    "react-test-renderer": "18.1.0",
+    "@types/react-native-svg-charts": "^5.0.13",
+    "@types/react-native-vector-icons": "^6.4.15",
+    "@types/react-test-renderer": "^18.0.3",
+    "@typescript-eslint/parser": "^6.7.4",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-polyfill-corejs2": "^0.4.5",
+    "babel-plugin-polyfill-corejs3": "^0.8.4",
+    "babel-plugin-polyfill-es-shims": "^0.9.2",
+    "babel-plugin-polyfill-regenerator": "^0.5.2",
+    "eslint": "^8.50.0",
+    "eslint-plugin-prettier": "5.0.0",
+    "jest": "^29.7.0",
+    "metro-config": "^0.79.1",
+    "metro-react-native-babel-preset": "0.77.0",
+    "metro-runtime": "^0.79.1",
+    "prettier": "^3.0.3",
+    "react-devtools": "^4.28.4",
+    "react-native-flipper": "^0.212.0",
+    "react-native-svg-transformer": "^1.1.0",
+    "react-test-renderer": "18.2.0",
     "redux-flipper": "^2.0.2",
-    "typescript": "^4.9.3"
+    "typescript": "^5.2.2"
   },
   "resolutions": {
     "@types/react": "^17"
