--- a/ios/Podfile
+++ b/ios/Podfile
@@ -24,7 +24,7 @@ target 'nativeapp' do
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
-    :flipper_configuration => FlipperConfiguration.enabled,
+    :flipper_configuration => FlipperConfiguration.enabled(["Debug"]),
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
@@ -51,6 +51,6 @@ target 'nativeapp' do
         end
       end
     end
-    
+
   end
 end
