--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-native-get-random-values": "^1.9.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^4.12.5",
     "react-native-pdf": "^6.7.1",
     "react-native-prompt-android": "^1.1.0",
